@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kamera
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kamera/ChangeLog,v 1.189 2011/12/18 19:46:16 dilfridge Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kamera/ChangeLog,v 1.190 2012/01/09 15:50:08 phajdan.jr Exp $
+
+  09 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> kamera-4.7.4.ebuild:
+  x86 stable wrt bug #396359
 
   18 Dec 2011; Andreas K. Huettel <dilfridge@gentoo.org> -kamera-4.6.5.ebuild:
   Drop KDE 4.6.5
